Fixed spacing issue.

--- a/src/views/component/Navigation/corporate-footer/style.less
+++ b/src/views/component/Navigation/corporate-footer/style.less
@@ -255,7 +255,7 @@
     }
 
     .footer-links {
-        margin: 0 0 5px 0;
+        margin: 0 0 10px 0;
       }
 
     .footer-copy-text {
